# wpa_statusd

./: .gitignore  Cargo.toml  Makefile  README.md  client.sh  config.example.ini  logo
src/: commands.rs  daemon.rs  main.rs  network_list.rs  parse.rs  protocol.rs  status.rs
systemd/: wpa_statusd.service  wpa_statusd_reset_permissions.sh
