[package]
name = "wpa_statusd"
version = "0.1.0"
authors = ["fence <fence@desu-mail.moe>"]
edition = "2018"
license = "GPL-3"
license_file = "License"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.9.3", features = ["ini"] }
serde = "1.0.10"
serde_derive = "1.0"
bson = "0.13.0" 
wpactrl = "0.3.1"
